05-CERTMANAGER-LETS-ENCRYPT/test-b-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  namespace: test-web
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
  - hosts:
    - testing-cert.com
    # This is the name of the secret where the certificate will be saved
    secretName: test-letsencrypt-staging-secret
  ingressClassName: nginx
  rules:
  - host: testing-cert.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-deploy-main
            port:
              number: 80
